# src/main/java/com/example/clinica_medica/generated/api/AuthApi.java
@@ -1,7 +1,8 @@
 package com.example.clinica_medica.generated.api;
 
-import com.example.clinica_medica.services.AuthService.AuthResponse;
 import com.example.clinica_medica.generated.model.LoginRequest;
+import com.example.clinica_medica.generated.model.RegisterRequest;
+import com.example.clinica_medica.services.AuthService.AuthResponse;
 import jakarta.annotation.Generated;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
@@ -10,4 +11,6 @@ import org.springframework.http.ResponseEntity;
 public interface AuthApi {
 
   ResponseEntity<AuthResponse> login(@Valid LoginRequest request);
+
+  ResponseEntity<AuthResponse> register(@Valid RegisterRequest request);
 }
